--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Bento</title>
+		<title>Home</title>
 		<link rel=" shortcut icon" type="image/png" href="assets/icons/favicon.png" />
 		<link rel="stylesheet" href="app.css" />
 		<script src="https://unpkg.com/lucide@latest"></script>
@@ -19,6 +19,17 @@
 			<i id="themeIcon" icon-name="moon"></i>
 		</button>
 		<div class="container">
+		
+		<!-- Search Bar -->
+
+		<form class="search-form" action="https://www.google.com.br/search">
+			<input type="text" class="search-text" placeholder="Pesquisar no Google" aria-label="Pesquisar no Google"
+				name="q" autocomplete="off" />
+			<button class="search-btn" aria-label="Pesquisar no Google" type="submit">
+				<i class="buttonIcon" icon-name="search"></i>
+			</button>
+		</form>
+		
 			<!-- Clock and Greetings  -->
 
 			<div class="timeBlock">
