--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<!-- Search Bar -->
 
 		<form class="search-form" action="https://www.google.com.br/search">
-			<input type="text" class="search-text" placeholder="Pesquisar no Google" aria-label="Pesquisar no Google"
+			<input type="text" class="search-text" placeholder="Search privately" aria-label="Pesquisar no Google"
 				name="q" autocomplete="off" />
 			<button class="search-btn" aria-label="Pesquisar no Google" type="submit">
 				<i class="buttonIcon" icon-name="search"></i>
