--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       ╚═╝╚═╝╝╚╝ ╩ ╚═╝
       -->
 
-	<body class="">
+	<body>
 		<button id="themeButton">
 			<i id="themeIcon" icon-name="moon"></i>
 		</button>
@@ -25,7 +25,7 @@
 		<form class="search-form" action="https://www.google.com.br/search">
 			<input type="text" class="search-text" placeholder="Search privately" aria-label="Pesquisar no Google"
 				name="q" autocomplete="off" />
-			<button class="search-btn" aria-label="Pesquisar no Google" type="submit">
+			<button class="search-btn" aria-label="Search privately" type="submit">
 				<i class="buttonIcon" icon-name="search"></i>
 			</button>
 		</form>
