--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		
 		<!-- Search Bar -->
 
-		<form class="search-form" action="https://www.google.com.br/search">
+		<form class="search-form" action="https://search.brave.com/search?q=%s">
 			<input type="text" class="search-text" placeholder="Search privately" aria-label="Pesquisar no Google"
 				name="q" autocomplete="off" />
 			<button class="search-btn" aria-label="Search privately" type="submit">
