--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		
 		<!-- Search Bar -->
 
-		<form class="search-form" action="https://search.brave.com/search?q=%s">
-			<input type="text" class="search-text" placeholder="Search privately" aria-label="Pesquisar no Google"
+		<form class="search-form" action="https://search.brave.com/search?q=%s" method="get" target="_blank">
+			<input type="submit" value="submit" class="search-text" placeholder="Search privately" aria-label="Pesquisar no Google"
 				name="q" autocomplete="off" />
 			<button class="search-btn" aria-label="Search privately" type="submit">
 				<i class="buttonIcon" icon-name="search"></i>
