add autofocus on searchform

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<!-- Search Bar -->
 
 		<form class="search-form" action="https://search.brave.com/search?q=%s" method="get" target="_blank">
-			<input type="text" class="search-text" placeholder="Search privately" aria-label="Pesquisar no Google"
+			<input type="text" autofocus="autofocus" class="search-text" placeholder="Search privately" aria-label="Pesquisar no Google"
 				name="q" autocomplete="off" />
 			<button class="search-btn" aria-label="Search privately" type="submit">
 				<i class="buttonIcon" icon-name="search"></i>
